<resources>
    <string name="app_name">Interesgram</string>

    <string name="next_button_text">Next</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="switch_login_text">Already have an account? Log in.</string>
    <string name="switch_sign_up_text">Don\'t have an account? Sign up.</string>
    <string name="login_button_text">Login</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_search" translatable="false">Search</string>
    <string name="menu_profile" translatable="false">Profile</string>
    <string name="menu_follow" translatable="false">Follow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search_discover_tab" translatable="false">Discover</string>
    <string name="search_user_tab" translatable="false">Users</string>
    <string name="profile_edit_button_text">Edit Profile</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="hint_username" translatable="false">Username</string>
    <string name="edit_profile_button_text" translatable="false">Apply</string>
    <string name="search_user_follow_button_text">Follow</string>
    <string name="search_user_following_button_text">Following</string>

</resources>
